HHH-5426 - HQL update/delete does not invalidate the query cache
git-svn-id: https://svn.jboss.org/repos/hibernate/core/trunk@20143 1b8cb986-b30d-0410-93ca-fae66ebed9b2